--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -48,6 +48,13 @@
             <ion-label>Notas</ion-label>
           </ion-item>
         </ion-menu-toggle>
+
+        <ion-menu-toggle auto-hide="true">
+          <ion-item button routerLink="/settings" routerDirection="root">
+            <ion-icon slot="start" name="settings-outline"></ion-icon>
+            <ion-label>Configurações</ion-label>
+          </ion-item>
+        </ion-menu-toggle>
       </ion-list>
     </ion-content>
   </ion-menu>
