--- a/src/app/pages/categorias/categoria-list/categoria-list.page.scss
+++ b/src/app/pages/categorias/categoria-list/categoria-list.page.scss
@@ -77,7 +77,7 @@ ion-item {
     font-size: 14px;
     color: var(--text-secondary);
     margin: 0;
-    font-family: var(--font-mono);
+    font-family: var(--font-dotmatrix) !important;
   }
 
   ion-icon {
