--- a/src/app/pages/notas/nota-list/nota-list.page.scss
+++ b/src/app/pages/notas/nota-list/nota-list.page.scss
@@ -12,7 +12,7 @@
 
   p {
     color: var(--text-secondary);
-    font-family: var(--font-mono);
+    font-family: var(--font-dotmatrix) !important;
     font-size: 12px;
   }
 }
@@ -34,14 +34,14 @@
 
   h2 {
     color: var(--text-primary);
-    font-family: var(--font-sans);
+    font-family: var(--font-dotmatrix) !important;
     font-size: 20px;
     margin: 0;
   }
 
   p {
     color: var(--text-secondary);
-    font-family: var(--font-mono);
+    font-family: var(--font-dotmatrix) !important;
     font-size: 14px;
     margin: 0;
   }
@@ -53,7 +53,7 @@
   gap: 4px;
   font-size: 11px;
   color: var(--text-muted);
-  font-family: var(--font-mono);
+  font-family: var(--font-dotmatrix) !important;
   margin-top: 4px;
 
   ion-icon {
