--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -12,7 +12,9 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">{{ getString('app.nome') }}</ion-title>
+      <ion-title size="large">
+        {{ getString('app.nome') }}
+      </ion-title>
     </ion-toolbar>
   </ion-header>
 
